--- a/ArtExp_train/TrainingArtExp.ipynb
+++ b/ArtExp_train/TrainingArtExp.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c02b8ca-4195-4c58-957c-4bd2090e61fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update this with the path to the folder containing the screenshots from Museums3k\n",
+    "PATH_TO_MUSEUMS_SCREENSHOTS = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "8db77039-65a1-4380-9819-69ed7ab40937",
    "metadata": {},
@@ -1941,8 +1952,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trn.to_csv(\"my_genre_style_train.csv\")\n",
-    "val.to_csv(\"my_genre_style_val.csv\")"
+    "# ====== NB here I'm loading the csv files I initially created. If you want to randomly generate them, you may want to update this part. ======\n",
+    "if os.path.exists(\"my_genre_style_train.csv\"):\n",
+    "    trn = pd.read_csv(\"my_genre_style_train.csv\")\n",
+    "    val = pd.read_csv(\"my_genre_style_val.csv\")\n",
+    "else:\n",
+    "    trn.to_csv(\"my_genre_style_train.csv\")\n",
+    "    val.to_csv(\"my_genre_style_val.csv\")"
    ]
   },
   {
@@ -2131,7 +2147,6 @@
    "source": [
     "from torchvision import transforms\n",
     "\n",
-    "# Define data transformations\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
     "        transforms.RandomResizedCrop(224),\n",
@@ -2481,17 +2496,14 @@
     "        self.load_state_dict(models.vit_b_16(weights=\"DEFAULT\").state_dict(), strict=False)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Reshape and permute the input tensor\n",
     "        x = self._process_input(x)\n",
     "        n = x.shape[0]\n",
     "\n",
-    "        # Expand the class token to the full batch\n",
     "        batch_class_token = self.class_token.expand(n, -1, -1)\n",
     "        x = torch.cat([batch_class_token, x], dim=1)\n",
     "\n",
     "        x = self.encoder(x)\n",
     "\n",
-    "        # Classifier \"token\" as used by standard language architectures\n",
     "        x = x[:, 0]\n",
     "\n",
     "        out1 = self.fc1(x)\n",
@@ -2542,17 +2554,14 @@
     "        self.load_state_dict(models.vit_b_32(weights=\"DEFAULT\").state_dict(), strict=False)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Reshape and permute the input tensor\n",
     "        x = self._process_input(x)\n",
     "        n = x.shape[0]\n",
     "\n",
-    "        # Expand the class token to the full batch\n",
     "        batch_class_token = self.class_token.expand(n, -1, -1)\n",
     "        x = torch.cat([batch_class_token, x], dim=1)\n",
     "\n",
     "        x = self.encoder(x)\n",
     "\n",
-    "        # Classifier \"token\" as used by standard language architectures\n",
     "        x = x[:, 0]\n",
     "\n",
     "        out1 = self.fc1(x)\n",
@@ -2652,116 +2661,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.17.7 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.17.5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/data01/afalcon/WikiArt/wandb/run-20240816_225202-1heaz6o0</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/falcon-alex/WikiArt/runs/1heaz6o0' target=\"_blank\">stilted-breeze-24</a></strong> to <a href='https://wandb.ai/falcon-alex/WikiArt' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/falcon-alex/WikiArt' target=\"_blank\">https://wandb.ai/falcon-alex/WikiArt</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/falcon-alex/WikiArt/runs/1heaz6o0' target=\"_blank\">https://wandb.ai/falcon-alex/WikiArt/runs/1heaz6o0</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0/24\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Corrupt JPEG data: bad Huffman code\n",
-      "Corrupt JPEG data: premature end of data segment\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train Loss: 4.9475 Acc Genre: 0.3222 Style: 0.1898\n",
-      "val Loss: 4.4956 Acc Genre: 0.3808 Style: 0.2135\n",
-      "\n",
-      "Epoch 1/24\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Corrupt JPEG data: bad Huffman code\n",
-      "Corrupt JPEG data: premature end of data segment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import copy\n",
@@ -2793,27 +2693,23 @@
     "        print('Epoch {}/{}'.format(epoch, num_epochs - 1))\n",
     "        print('-' * 10)\n",
     "\n",
-    "        # Each epoch has a training and validation phase\n",
     "        for phase in ['train', 'val']:\n",
     "            if phase == 'train':\n",
-    "                model.train()  # Set model to training mode\n",
+    "                model.train()\n",
     "            else:\n",
-    "                model.eval()   # Set model to evaluate mode\n",
+    "                model.eval()\n",
     "\n",
     "            running_loss = 0.0\n",
     "            running_corrects_genre = 0\n",
     "            running_corrects_style = 0\n",
     "\n",
-    "            # Iterate over data\n",
     "            for image, style, genre, style_name, genre_name in dataloaders[phase]:\n",
     "                image = image.to(device)\n",
     "                style = style.to(device)\n",
     "                genre = genre.to(device)\n",
     "\n",
-    "                # Zero the parameter gradients\n",
     "                optimizer.zero_grad()\n",
     "\n",
-    "                # Forward\n",
     "                with torch.set_grad_enabled(phase == 'train'):\n",
     "                    _, genre_out, style_out = model(image)\n",
     "                    _, genre_preds = torch.max(genre_out, 1)\n",
@@ -2822,12 +2718,10 @@
     "                    style_loss = criterion(style_out, style)\n",
     "                    loss = genre_loss + style_loss\n",
     "\n",
-    "                    # Backward + optimize only if in training phase\n",
     "                    if phase == 'train':\n",
     "                        loss.backward()\n",
     "                        optimizer.step()\n",
     "\n",
-    "                # Statistics\n",
     "                running_loss += loss.item() * image.size(0)\n",
     "                running_corrects_genre += torch.sum(genre_preds == genre)\n",
     "                running_corrects_style += torch.sum(style_preds == style)\n",
@@ -2847,7 +2741,6 @@
     "            print('{} Loss: {:.4f} Acc Genre: {:.4f} Style: {:.4f}'.format(\n",
     "                phase, epoch_loss, epoch_acc_genre, epoch_acc_style))\n",
     "\n",
-    "            # Deep copy the model\n",
     "            if phase == 'val' and epoch_acc_genre > best_acc:\n",
     "                best_acc = epoch_acc_genre\n",
     "                best_model_wts = copy.deepcopy(model.state_dict())\n",
@@ -2861,11 +2754,9 @@
     "\n",
     "    wandb.finish()\n",
     "    \n",
-    "    # Load best model weights\n",
     "    model.load_state_dict(best_model_wts)\n",
     "    return model\n",
     "\n",
-    "# Train the model\n",
     "model = train_model(model, criterion, optimizer, scheduler, num_epochs=25)\n"
    ]
   },
@@ -2952,22 +2843,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c848a8fd-afb8-49de-8c65-cbda4595b87b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted(os.listdir(\"/data01/aabdari/dataset_museum3k/Screenshots/Museum2504-5.unity/1\"))[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8f414c64-85d9-4ddc-846e-62d681983d28",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ScreenshotsDataset(Dataset):\n",
-    "    def __init__(self, transforms, root_path=\"/data01/aabdari/dataset_museum3k/Screenshots\"):\n",
+    "    def __init__(self, transforms, root_path=PATH_TO_MUSEUMS_SCREENSHOTS):\n",
     "        super().__init__()\n",
     "        self.transforms = transforms\n",
     "        self.images_path = list()\n",
@@ -3130,116 +3011,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "id": "36e7bcfc-b255-499c-a3ed-a3f73fe33791",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting open_clip_torch\n",
-      "  Downloading open_clip_torch-2.26.1-py3-none-any.whl (1.5 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.5 MB 5.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: torch>=1.9.0 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from open_clip_torch) (2.1.2+cu121)\n",
-      "Requirement already satisfied: tqdm in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from open_clip_torch) (4.66.4)\n",
-      "Collecting timm\n",
-      "  Downloading timm-1.0.8-py3-none-any.whl (2.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 2.3 MB 64.3 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting regex\n",
-      "  Downloading regex-2024.7.24-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (778 kB)\n",
-      "\u001b[K     |████████████████████████████████| 778 kB 43.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: huggingface-hub in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from open_clip_torch) (0.23.4)\n",
-      "Requirement already satisfied: torchvision in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from open_clip_torch) (0.16.2+cu121)\n",
-      "Collecting ftfy\n",
-      "  Downloading ftfy-6.2.3-py3-none-any.whl (43 kB)\n",
-      "\u001b[K     |████████████████████████████████| 43 kB 10.3 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jinja2 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (3.1.2)\n",
-      "Requirement already satisfied: networkx in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (3.0)\n",
-      "Requirement already satisfied: fsspec in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (2023.4.0)\n",
-      "Requirement already satisfied: filelock in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (3.9.0)\n",
-      "Requirement already satisfied: triton==2.1.0; platform_system == \"Linux\" and platform_machine == \"x86_64\" in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (2.1.0)\n",
-      "Requirement already satisfied: sympy in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (1.12)\n",
-      "Requirement already satisfied: typing-extensions in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torch>=1.9.0->open_clip_torch) (4.4.0)\n",
-      "Requirement already satisfied: pyyaml in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from timm->open_clip_torch) (6.0.1)\n",
-      "Collecting safetensors\n",
-      "  Downloading safetensors-0.4.4-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (436 kB)\n",
-      "\u001b[K     |████████████████████████████████| 436 kB 75.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: packaging>=20.9 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from huggingface-hub->open_clip_torch) (24.1)\n",
-      "Requirement already satisfied: requests in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from huggingface-hub->open_clip_torch) (2.32.3)\n",
-      "Requirement already satisfied: numpy in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torchvision->open_clip_torch) (1.24.1)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from torchvision->open_clip_torch) (9.3.0)\n",
-      "Requirement already satisfied: wcwidth<0.3.0,>=0.2.12 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from ftfy->open_clip_torch) (0.2.13)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from jinja2->torch>=1.9.0->open_clip_torch) (2.1.3)\n",
-      "Requirement already satisfied: mpmath>=0.19 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from sympy->torch>=1.9.0->open_clip_torch) (1.3.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from requests->huggingface-hub->open_clip_torch) (2.1.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from requests->huggingface-hub->open_clip_torch) (3.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from requests->huggingface-hub->open_clip_torch) (2022.12.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /data01/afalcon/env_thvis016/lib/python3.8/site-packages (from requests->huggingface-hub->open_clip_torch) (1.26.13)\n",
-      "Installing collected packages: safetensors, timm, regex, ftfy, open-clip-torch\n",
-      "Successfully installed ftfy-6.2.3 open-clip-torch-2.26.1 regex-2024.7.24 safetensors-0.4.4 timm-1.0.8\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install open_clip_torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 279,
-   "id": "5aa0d32f-6d25-47d1-8fda-060e78137c7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "7313it [04:13, 28.85it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 3641.55it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import open_clip\n",
-    "\n",
-    "model, _, preprocess = open_clip.create_model_and_transforms('ViT-B-32-quickgelu', pretrained='laion400m_e32')\n",
-    "model = model.to(device)\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "features = {}\n",
-    "genre_style_predictions = {}\n",
-    "model.eval()\n",
-    "with torch.no_grad(), torch.cuda.amp.autocast():\n",
-    "    for batch_index, (images, images_paths, museums, rooms) in tqdm(enumerate(screenshots_dataloader)):\n",
-    "        images = images.to(device)\n",
-    "        images_fts = model.encode_image(images)\n",
-    "        images_fts /= images_fts.norm(dim=-1, keepdim=True)\n",
-    "    \n",
-    "        images_fts = images_fts.cpu()\n",
-    "        for museum, room, image_path, image_fts in zip(museums, rooms, images_paths, images_fts):\n",
-    "            if museum not in features:\n",
-    "                features[museum] = {}\n",
-    "            if room not in features[museum]:\n",
-    "                features[museum][room] = list()\n",
-    "            features[museum][room].append(image_fts)\n",
-    "\n",
-    "os.makedirs(\"preextracted_vectors_LAION_OpenCLIP\", exist_ok=True)\n",
-    "for mus in tqdm(features.keys(), total=len(features.keys())):\n",
-    "    # print(mus)\n",
-    "    museum_fts = []\n",
-    "    for room, list_img_fts in features[mus].items():\n",
-    "        museum_fts.extend(list_img_fts)\n",
-    "    # print(len(museum_fts))\n",
-    "    museum_fts = torch.stack(museum_fts)\n",
-    "    # print(museum_fts.shape)\n",
-    "    torch.save(museum_fts, f\"preextracted_vectors_LAION_OpenCLIP/{mus}.pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "fa2a152b-c065-423c-abde-6f5259148788",
    "metadata": {},
@@ -3249,9 +3020,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_thvis016",
+   "display_name": "base",
    "language": "python",
-   "name": "env_thvis016"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3263,7 +3034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
